# MyOpenGl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: Shader.cpp.FF59D6C1BFF2F197.idx  Shader.hpp.798ED77F1A5E50BE.idx  Texture.cpp.F70197B4E788B7C4.idx  Texture.hpp.4D1904A4703F25D1.idx  Utilities.cpp.EB2F539BEC3CDAC2.idx  Utilities.hpp.FFCBB616BF40B526.idx  VertexBuffer.cpp.CA6AF3EABFCC9A3E.idx  VertexBuffer.hpp.0BE94753984846E8.idx  pch.cpp.C997F2A4921C1DCD.idx  pch.hpp.F04DAFFBF5527023.idx
.github/workflows/: cmake-multi-platform.yml
include/: AdditionalGLFuncs.hpp  Shader.hpp  Texture.hpp  Utilities.hpp  VertexBuffer.hpp  pch.hpp
src/: Shader.cpp  Texture.cpp  Utilities.cpp  VertexBuffer.cpp  pch.cpp
thirdparty.old/glad/include/glad/: gl.h
